--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -8,6 +8,8 @@
 
 <div class="row marketing">
   <div class="col-lg-6">
+    <input id="chat-input"></input>
+    <div id="messages"></div>
   </div>
 
   <div class="col-lg-6">
