--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,17 +1,14 @@
 <div class="jumbotron">
   <h2>Chatterize</h2>
-  <p class="lead">Chat with people in you area!</p>
+  <p class="lead">Chat with people!</p>
   <p>
     This project is a work-in-progress.
   </p>
 </div>
 
 <div class="row marketing">
-  <div class="col-lg-6">
-    <input id="chat-input"></input>
-    <div id="messages"></div>
-  </div>
-
-  <div class="col-lg-6">
+  <div class="col-lg-12">
+    <div id="messages" style="height: 300px; overflow-y: scroll;"></div>
+    <input id="chat-input" style="width: 100%;"></input>
   </div>
 </div>
